add resolvedByUser to GET /workflows in swagger.yml; and to GetWorkflows in handler and ddb store
